CDR-1552 Include template in test data, fix example composition + cleanup