@@ -20,43 +20,43 @@ package org.ehrbase.application.server;
 import com.nedap.archie.rm.composition.Composition;
 import com.nedap.archie.rm.support.identification.ObjectVersionId;
 import java.io.IOException;
-import java.net.URI;
+import java.io.UncheckedIOException;
 import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
 import java.util.UUID;
 import java.util.function.Function;
+import org.apache.commons.io.IOUtils;
 import org.ehrbase.openehr.sdk.client.openehrclient.OpenEhrClientConfig;
 import org.ehrbase.openehr.sdk.client.openehrclient.defaultrestclient.DefaultRestClient;
 import org.ehrbase.openehr.sdk.client.openehrclient.defaultrestclient.DefaultRestCompositionEndpoint;
 import org.ehrbase.openehr.sdk.serialisation.jsonencoding.CanonicalJson;
-import org.junit.jupiter.api.Assertions;
 
 public class CompositionSupport {
 
     private final CanonicalJson json = new CanonicalJson();
     private final Function<UUID, DefaultRestCompositionEndpoint> endpoint;
 
-    private static String compo;
+    private final TemplateSupport templateSupport;
+
+    private static final String compo;
 
     static {
-        URL url = CompositionSupport.class.getResource("composition.json");
-        Path path = Paths.get(URI.create(url.toString()));
         try {
-            compo = Files.readString(path);
+            URL url = CompositionSupport.class.getResource("composition.json");
+            compo = IOUtils.toString(url, StandardCharsets.UTF_8);
         } catch (IOException e) {
-            Assertions.fail();
+            throw new UncheckedIOException(e);
         }
     }
 
     public CompositionSupport(OpenEhrClientConfig cfg) {
         endpoint = uuid -> new DefaultRestCompositionEndpoint(new DefaultRestClient(cfg), uuid);
+        templateSupport = new TemplateSupport(cfg);
     }
 
     public ObjectVersionId create(UUID ehrId) {
         Composition composition = json.unmarshal(compo, Composition.class);
-        ObjectVersionId versionId = endpoint.apply(ehrId).mergeRaw(composition);
-        return versionId;
+        templateSupport.ensureTemplateExistence(composition);
+        return endpoint.apply(ehrId).mergeRaw(composition);
     }
 }
